src/test/compile-fail/issue-3099-a.rs
enum a { b, c }

enum a { d, e } //~ ERROR duplicate definition of type a

fn main() {}
